Added cluster details tests to CCSPointInTimeIT